--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerEvent" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerEvent"
+        app:cameraZoom="6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
