--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -64,7 +64,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Button"
+        android:background="@color/quantum_googblueA400"
+        android:text="Search"
         app:layout_constraintStart_toStartOf="@+id/cardView2"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
@@ -73,6 +74,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="352dp"
         android:layout_height="488dp"
+        android:layout_marginTop="8dp"
         app:cameraZoom="7"
         app:layout_constraintStart_toStartOf="@+id/btnShowResults"
         app:layout_constraintTop_toBottomOf="@+id/btnShowResults" />
