--- a/app/src/main/res/layout/fragment_routes.xml
+++ b/app/src/main/res/layout/fragment_routes.xml
@@ -64,8 +64,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@color/quantum_googblueA400"
+        android:background="?attr/colorPrimary"
         android:text="Search"
+        android:textColor="@color/colorWhite"
         app:layout_constraintStart_toStartOf="@+id/cardView2"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
