--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Mark Quinn : S1510840 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
